--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
             android:name=".activity.RecordActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop" />
+        <activity android:name=".fragment.FragmentA" />
 
     </application>
 
